--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,8 @@ classifiers = [
 ]
 dependencies = [
   "nltk",
-  "googletrans",
-  "regex",
-  "pickle",
-  "unicodedata"
+  "googletrans==3.1.0a0",
+  "regex"
 ]
 
 [tool.setuptools.packages.find]
