Added change to workflow.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,8 +42,9 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const status = context.payload.workflow_run.conclusion === 'success' ? 'passing' : 'failing';
-            core.setOutput('status', status);
+            const status = "${{ job.status }}" === "success" ? "passing" : "failing";
+            core.setOutput("status", status);
+        
 
       - name: Update Badge
         uses: RubbaBoy/BYOB@v1
